[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/themes/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/game_over.gd" type="Script" id=2]
[ext_resource path="res://music/MM_TT-GameOver.ogg" type="AudioStream" id=3]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -36.0
margin_top = -4.0
margin_right = 36.0
margin_bottom = 4.0
text = "GAME OVER"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Buttons" type="VBoxContainer" parent="CenterContainer"]
margin_left = 40.0
margin_top = 100.0
margin_right = 216.0
margin_bottom = 123.0
custom_constants/separation = 7

[node name="ContinueButton" type="Button" parent="CenterContainer/Buttons"]
margin_right = 176.0
margin_bottom = 8.0
mouse_filter = 2
text = "Continue"

[node name="TitleScreenButton" type="Button" parent="CenterContainer/Buttons"]
margin_top = 15.0
margin_right = 176.0
margin_bottom = 23.0
mouse_filter = 2
text = "Return to Title Screen"

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
